<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Panoramic Screenshot</string>

	<!-- Service notifications -->
	<string name="notifi_first">Now, please capture the first screenshot.</string>
	<string name="notifi_count">Take the %d(st,rd,th) screenshot.</string>
	<string name="notifi_tip">Click this notification to finish.</string>
	<string name="cancel">Cancel</string>
	
	<!-- Main -->
	<string-array name="main_tabs">
		<item>Images</item>
		<item>Settings</item>
		<item>About</item>
	</string-array>
	
	<!-- Settings -->
	<string name="shot_settings">Screenshot Settings</string>
	<string name="paths">Paths</string>
	<string name="screenshot_directory">Screenshot Directory</string>
	<string name="output_directory">Output Directory</string>
	<string name="analyzing_options">Analyzing Options</string>
	<string name="matching_threshold">Matching Threshold</string>
	<string name="matching_threshold_sum">If parts of two image have a different percentage less than this value, count the two part as the same. Used to ignore slight differences.</string>
	<string name="top_shadow_depth">Depth of Shadow at Top</string>
	<string name="top_shadow_depth_sum">If an app has an extremely deep shadow at the top (below the title bar or toolbar or actionbar) which is not very usual, please increase this value. Set this to 0 if the screenshoted app has no or little little shadow at top. The default value is recommended for most circumstances.</string>
	<string name="version">Version</string>
	<string name="app_version">App Version</string>
	
	<!-- Messages -->
	<string name="plz_wait">Please wait...</string>
	<string name="saved">Screenshot saved to %s</string>
	<string name="analyzing_image" formatted="false">Analyzing image %d and %d of %d ...</string>
	<string name="composing_image">Composing images...</string>
	<string name="compose_failure">Compose failure. You could change the parameters and try again.</string>
	
</resources>
