<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<PreferenceCategory
		android:title="@string/paths">
		
		<Preference
			android:key="screenshot_directory"
			android:title="@string/screenshot_directory"/>
		
		<Preference
			android:key="output_directory"
			android:title="@string/output_directory"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/analyzing_options">
		
		<info.papdt.pano.ui.preference.DiscreteSeekBarPreference
			android:key="matching_threshold"
			android:title="@string/matching_threshold"
			android:summary="@string/matching_threshold_sum"
			app:dsbp_max="20"
			app:dsbp_min="0"
			app:dsbp_format="%d%%"/>
		
		<info.papdt.pano.ui.preference.DiscreteSeekBarPreference
			android:key="top_shadow_depth"
			android:title="@string/top_shadow_depth"
			android:summary="@string/top_shadow_depth_sum"
			app:dsbp_max="100"
			app:dsbp_min="0"
			app:dsbp_format="%d"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/version">
		
		<Preference
			android:key="app_version"
			android:title="@string/app_version"/>
		
	</PreferenceCategory>
	
	<Preference/> <!--HACK: Fix strange display in MainActivity-->
	
</PreferenceScreen>
